<resources>
    <string name="webclient_id">194193478354-4i4opga5ggl9esvlgf4bpil90iv2bhtp.apps.googleusercontent.com</string>
    <string name="app_name">LocalMap</string>
    <string name="title_activity_main_inicio">MainInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuário</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Local Map</string>
    <string name="menu_configuracao">Configurações</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="sobre_introdução">Este aplicativo foi produzido com o intuito de ser um trabalho de conclusão de curso, TCC.</string>
    <string name="orientador">Orientador</string>
    <string name="nome_orientador">Alexandre Costa</string>
    <string name="orientandos">Orientandos</string>
    <string name="orientando1">Carlos Eduardo</string>
    <string name="orientando2">Rafael Danstim</string>
    <!-- "Ordenar por" de inicio -->
    <string-array name="ordenar">
        <item>Melhor Avaliado</item>
        <item>Ordem Alfabética</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>